# web_hello_world

./: alembic.ini  main.py  pyproject.toml
auth/: scheme.py
web/: app.py  auth.py  config.py  database.py  exceptions.py
web/admin/: auth.py  views.py
web/courses/: dao.py  models.py  router.py  schemas.py
web/dao/: base.py
web/images/: publish.py  router.py
web/migrations/: env.py
web/migrations/versions/: 07f089e8f04c_add_rel.py  1a8dc6f265a0_datatime_tz.py  4396a7fb60e2_add_rel.py  61b3d1ae5ca5_add_courses1.py  70b5b8e3a5e4_add_pass.py  881a2ac5f257_init.py  a1ba1a70d172_add_courses.py
web/sync_or_async/: router.py
web/users/: dao.py  dependencies.py  models.py  router.py  schemas.py
