[project]
name = "web-hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "phonenumbers>=9.0.13",
    "pydantic-extra-types>=2.10.5",
    "pydantic[email]>=2.11.7",
    "uvicorn>=0.35.0",
]
